--- a/app/src/main/res/values/preferences.xml
+++ b/app/src/main/res/values/preferences.xml
@@ -37,12 +37,15 @@
 
     <string name="pref_message_count" translatable="false">message_count</string>
 
-    <string name="pref_pin_conversation" translatable="false">pin_conversation</string>
-    <string name="pref_primary_color" translatable="false">primary_color</string>
-    <string name="pref_primary_dark_color" translatable="false">primary_dark_color</string>
-    <string name="pref_primary_light_color" translatable="false">primary_light_color</string>
-    <string name="pref_accent_color" translatable="false">accent_color</string>
-    <string name="pref_ringtone" translatable="false">ringtone</string>
-    <string name="pref_group_name" translatable="false">group_name</string>
+    <string name="pref_contact_pin_conversation" translatable="false">contact_pin_conversation</string>
+    <string name="pref_contact_primary_color" translatable="false">contact_primary_color</string>
+    <string name="pref_contact_primary_dark_color" translatable="false">contact_primary_dark_color</string>
+    <string name="pref_contact_primary_light_color" translatable="false">contact_primary_light_color</string>
+    <string name="pref_contact_accent_color" translatable="false">contact_accent_color</string>
+    <string name="pref_contact_ringtone" translatable="false">contact_ringtone</string>
+    <string name="pref_contact_group_name" translatable="false">contact_group_name</string>
+
+    <string name="pref_ringtone">ringtone</string>
+    <string name="pref_vibrate">vibrate</string>
 
 </resources>
