add support for snoozing notifications from drawer

--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -71,7 +71,8 @@
             android:src="@drawable/ic_snooze"
             android:background="?android:attr/selectableItemBackground"
             android:contentDescription="@string/menu_snooze"
-            android:padding="8dp"/>
+            android:padding="8dp"
+            android:id="@+id/snooze"/>
 
     </LinearLayout>
 
