--- a/app/src/main/res/layout/appwidget.xml
+++ b/app/src/main/res/layout/appwidget.xml
@@ -26,14 +26,29 @@
         android:background="@color/colorPrimary">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/app_name"
             android:textSize="18sp"
             android:layout_marginStart="16dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:textColor="@android:color/white"
-            android:layout_centerVertical="true" />
+            android:layout_centerVertical="true"
+            android:layout_toStartOf="@+id/compose"/>
+
+        <ImageButton
+            android:id="@+id/compose"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/actionbutton_background"
+            android:layout_centerVertical="true"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/ic_add"
+            android:scaleX=".95"
+            android:scaleY=".95"
+            android:layout_alignParentTop="true"
+            android:contentDescription="@null"/>
 
     </RelativeLayout>
 
