--- a/app/src/main/res/values/preferences.xml
+++ b/app/src/main/res/values/preferences.xml
@@ -49,5 +49,6 @@
     <string name="pref_ringtone">ringtone</string>
     <string name="pref_vibrate">vibrate</string>
     <string name="pref_snooze">snooze</string>
+    <string name="pref_dark_theme">dark_theme</string>
 
 </resources>
