--- a/app/src/main/res/layout/fragment_image_viewer.xml
+++ b/app/src/main/res/layout/fragment_image_viewer.xml
@@ -15,8 +15,15 @@
   ~ limitations under the License.
   -->
 
-<uk.co.senab.photoview.PhotoView
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/photo"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_height="match_parent">
+
+    <uk.co.senab.photoview.PhotoView
+        android:id="@+id/photo"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"/>
+
+</FrameLayout>
