--- a/app/src/main/res/layout/fragment_message_list.xml
+++ b/app/src/main/res/layout/fragment_message_list.xml
@@ -125,15 +125,33 @@
                 android:imeOptions="actionSend"
                 android:maxLines="5"/>
 
-            <android.support.design.widget.FloatingActionButton
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/ic_send"
-                android:id="@+id/send"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                app:elevation="0dp"
-                app:fabSize="mini"/>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent">
+
+                <android.support.design.widget.FloatingActionButton
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/ic_send"
+                    android:id="@+id/send"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    app:elevation="0dp"
+                    app:fabSize="mini"
+                    android:layout_centerInParent="true"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="2dp"
+                    android:layout_centerHorizontal="true"
+                    android:textSize="12sp"
+                    android:id="@+id/text_counter"
+                    android:textColor="@color/secondaryText"/>
+
+            </RelativeLayout>
 
         </LinearLayout>
 
