--- a/app/src/main/res/menu/navigation_drawer_messages.xml
+++ b/app/src/main/res/menu/navigation_drawer_messages.xml
@@ -41,6 +41,11 @@
             android:icon="@drawable/ic_about"
             android:title="@string/menu_conversation_information"/>
 
+        <item
+            android:id="@+id/drawer_conversation_blacklist"
+            android:icon="@drawable/ic_block"
+            android:title="@string/menu_conversation_blacklist"/>
+
     </group>
 
     <group android:id="@+id/other_section">
