--- a/app/src/main/res/layout/fragment_image_viewer.xml
+++ b/app/src/main/res/layout/fragment_image_viewer.xml
@@ -26,4 +26,11 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"/>
 
+    <com.afollestad.easyvideoplayer.EasyVideoPlayer
+        android:id="@+id/player"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:layout_marginBottom="48dp"/>
+
 </FrameLayout>
