--- a/app/src/main/res/layout/fragment_image_viewer.xml
+++ b/app/src/main/res/layout/fragment_image_viewer.xml
@@ -33,4 +33,13 @@
         android:visibility="gone"
         android:layout_marginBottom="48dp"/>
 
+    <ImageView
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:src="@drawable/ic_audio_white"
+        android:layout_gravity="center"
+        android:id="@+id/audio"
+        android:contentDescription="@null"
+        android:visibility="gone"/>
+
 </FrameLayout>
