record audio and attach

--- a/app/src/main/res/layout/fragment_message_list.xml
+++ b/app/src/main/res/layout/fragment_message_list.xml
@@ -70,7 +70,8 @@
                 android:contentDescription="@string/attached_image"
                 android:layout_marginStart="12dp"
                 android:layout_marginEnd="48dp"
-                android:layout_marginTop="12dp"/>
+                android:layout_marginTop="12dp"
+                android:scaleType="fitCenter"/>
 
             <ImageView
                 android:layout_width="24dp"
