--- a/app/src/main/res/layout/view_record_audio.xml
+++ b/app/src/main/res/layout/view_record_audio.xml
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_record_audio"
-        android:id="@+id/fab"
+        android:id="@+id/record"
         android:layout_margin="@dimen/fab_margin"
         app:elevation="6dp"
         app:pressedTranslationZ="12dp"
@@ -37,6 +37,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/start_recording_audio"
-        android:layout_margin="8dp"/>
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:id="@+id/record_text"/>
 
 </LinearLayout>
