--- a/app/src/main/res/xml/faqs.xml
+++ b/app/src/main/res/xml/faqs.xml
@@ -17,6 +17,14 @@
 
 <faqs>
 
+    <item question="Why are my GIFs and videos that I send so small?">
+        <answer>The majority of carriers enforce a 1 MB size limit on all attachments. This unfortunately means that the quality and resolution of content like videos needs to be decreased so that it can fit under this limit but still be useful to the recipient. Since all of the infrastructure is already in place by carriers to support this, it isn't something that I can improve in the app.</answer>
+    </item>
+
+    <item question="I'm not able to send MMS messages or group messages, what should I do?">
+        <answer>If you send me an email, we can try and troubleshoot possible solutions to the problem! I can also get more information this way so that the process can be improved in the future.</answer>
+    </item>
+
     <item question="How can I get in contact with you?">
         <answer>There are multiple options on this screen to talk to a dev from Klinker Apps, you can use any of them to talk to us! Probably your best bet is email for a quick response, or you can post on Google+ if you'd like other members to also help you out with something or get feedback on your ideas.</answer>
     </item>
