fix lint issues in giphy library

--- a/giphy/src/main/res/layout/adapter_item_gif.xml
+++ b/giphy/src/main/res/layout/adapter_item_gif.xml
@@ -27,7 +27,8 @@
         android:id="@+id/image"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        android:contentDescription="@null"/>
 
     <com.klinker.android.simple_videoview.SimpleVideoView
         android:id="@+id/video"
