--- a/giphy/src/main/res/layout/adapter_item_gif_header.xml
+++ b/giphy/src/main/res/layout/adapter_item_gif_header.xml
@@ -11,6 +11,7 @@
         android:scaleType="center"
         android:layout_marginTop="12dp"
         android:src="@drawable/giffy"
-        android:foregroundGravity="center"/>
+        android:foregroundGravity="center"
+        android:contentDescription="@null"/>
 
 </LinearLayout>
