--- a/giphy/src/main/res/layout/giffy_search_activity.xml
+++ b/giphy/src/main/res/layout/giffy_search_activity.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -37,4 +37,4 @@
         android:layout_marginTop="?android:actionBarSize"
         android:saveEnabled="false" />
 
-</FrameLayout>
+</merge>
