--- a/app/src/main/res/layout-sw600dp-land/activity_messenger.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_messenger.xml
@@ -62,11 +62,9 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <android.support.design.widget.AppBarLayout
+                <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                    android:id="@+id/app_bar_layout">
+                    android:layout_height="wrap_content">
 
                     <android.support.v7.widget.Toolbar
                         android:id="@+id/toolbar"
@@ -74,7 +72,13 @@
                         android:layout_height="?attr/actionBarSize"
                         android:background="?attr/colorPrimary"
                         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-                </android.support.design.widget.AppBarLayout>
+
+                    <com.miguelcatalan.materialsearchview.MaterialSearchView
+                        android:id="@+id/search_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+                </FrameLayout>
 
                 <FrameLayout
                     android:layout_width="match_parent"
