--- a/app/src/main/res/layout/activity_messenger.xml
+++ b/app/src/main/res/layout/activity_messenger.xml
@@ -42,12 +42,27 @@
                 android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                 android:id="@+id/app_bar_layout">
 
-                <android.support.v7.widget.Toolbar
-                    android:id="@+id/toolbar"
+                <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:background="?attr/colorPrimary"
-                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+                    android:layout_height="wrap_content">
+
+                    <android.support.v7.widget.Toolbar
+                        android:id="@+id/toolbar"
+                        android:layout_width="match_parent"
+                        android:layout_height="?attr/actionBarSize"
+                        android:background="?attr/colorPrimary"
+                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
+                    <com.miguelcatalan.materialsearchview.MaterialSearchView
+                        android:id="@+id/search_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:searchBackground="@color/drawerBackground"
+                        android:textColorHint="@color/secondaryText"
+                        android:hint="@string/enter_search"/>
+
+                </FrameLayout>
+
             </android.support.design.widget.AppBarLayout>
 
             <FrameLayout
