--- a/app/src/main/res/xml/open_source.xml
+++ b/app/src/main/res/xml/open_source.xml
@@ -239,6 +239,24 @@
         </license>
     </item>
 
+    <item name="MaterialSearchView" owner="Miguel Catalan Bañuls">
+        <license>
+            Copyright 2015 Miguel Catalan Bañuls
+
+            Licensed under the Apache License, Version 2.0 (the "License");
+            you may not use this file except in compliance with the License.
+            You may obtain a copy of the License at
+
+            http://www.apache.org/licenses/LICENSE-2.0
+
+            Unless required by applicable law or agreed to in writing, software
+            distributed under the License is distributed on an "AS IS" BASIS,
+            WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+            See the License for the specific language governing permissions and
+            limitations under the License.
+        </license>
+    </item>
+
     <item name="glide" owner="Bump Technologies">
         <license>
             Copyright 2014 Google, Inc. All rights reserved.
