--- a/app/src/main/res/layout/activity_messenger.xml
+++ b/app/src/main/res/layout/activity_messenger.xml
@@ -58,6 +58,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:searchBackground="@color/drawerBackground"
+                        app:searchBackIcon="@drawable/ic_search_back"
+                        app:searchCloseIcon="@drawable/ic_search_close"
+                        android:textColor="@color/primaryText"
                         android:textColorHint="@color/secondaryText"
                         android:hint="@string/enter_search"/>
 
