ui for viewing and deleting scheduled messages

--- a/app/src/main/res/layout/fragment_invite_friends.xml
+++ b/app/src/main/res/layout/fragment_invite_friends.xml
@@ -24,18 +24,22 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/message_list_padding"
+        android:layout_marginEnd="@dimen/message_list_padding"
         android:text="@string/invite_friends_title"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:layout_marginTop="8dp"
         android:textSize="18sp"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/message_list_padding"
+        android:layout_marginEnd="@dimen/message_list_padding"
         android:text="@string/invite_friends_summary"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"/>
 
@@ -52,6 +56,8 @@
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/message_list_padding"
+            android:layout_marginEnd="@dimen/message_list_padding"
             android:id="@+id/list"
             android:scrollbars="vertical"/>
 
