--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -16,7 +16,12 @@
 
 <changelog>
 
-    <version name="0.1" description="Working SMS/MMS client">
+    <version name="0.5" description="August 3rd, 2016">
+        <text>All of the power features implemented on the phone client now, just need to add server support</text>
+        <text>Bug fixes on initial client</text>
+    </version>
+
+    <version name="0.1" description="July 27th, 2016">
         <text>Basically recreate features that I've implemented in EvolveSMS in the past in a better way</text>
         <text>Use my own database instead of the internal content provider for speed and syncing between devices</text>
     </version>
