--- a/api_implementation/src/main/res/values/colors.xml
+++ b/api_implementation/src/main/res/values/colors.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (C) 2016 Jacob Klinker
   ~
@@ -14,12 +15,10 @@
   ~ limitations under the License.
   -->
 
-<manifest package="xyz.klinker.messenger.api.implementation"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<resources>
 
-    <application >
-        <activity android:name=".LoginActivity"
-            android:theme="@style/Theme.AppCompat.Translucent"/>
-    </application>
+    <color name="api_login_background">#009688</color>
+    <color name="api_divider_color">#22FFFFFF</color>
+    <color name="api_window_background">#55000000</color>
 
-</manifest>
+</resources>
