--- a/app/src/main/res/xml/my_account.xml
+++ b/app/src/main/res/xml/my_account.xml
@@ -18,6 +18,11 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <Preference
+        android:key="@string/pref_my_account_setup"
+        android:title="@string/setup_my_account"
+        android:summary="@string/setup_my_account_summary"/>
+
+    <Preference
         android:key="@string/pref_message_count"/>
 
     <Preference
