--- a/api_implementation/src/main/res/values/styles.xml
+++ b/api_implementation/src/main/res/values/styles.xml
@@ -17,7 +17,7 @@
 
 <resources>
 
-    <style name="Theme.AppCompat.Translucent" parent="@style/Theme.AppCompat.NoActionBar">
+    <style name="api_Theme.AppCompat.Translucent" parent="@style/Theme.AppCompat.NoActionBar">
         <item name="android:background">@android:color/transparent</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
