--- a/api_implementation/src/main/res/values/colors.xml
+++ b/api_implementation/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
 <resources>
 
     <color name="api_login_background">#009688</color>
+    <color name="api_fab_background">#FF4081</color>
     <color name="api_divider_color">#22FFFFFF</color>
     <color name="api_window_background">#55000000</color>
 
