--- a/api_implementation/src/main/res/values/styles.xml
+++ b/api_implementation/src/main/res/values/styles.xml
@@ -18,6 +18,7 @@
 <resources>
 
     <style name="api_Theme.AppCompat.Translucent" parent="@style/Theme.AppCompat.NoActionBar">
+        <item name="colorAccent">@android:color/white</item>
         <item name="android:background">@android:color/transparent</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
