--- a/app/src/main/res/values/preferences.xml
+++ b/app/src/main/res/values/preferences.xml
@@ -23,6 +23,7 @@
     <string name="pref_account_id" translatable="false">account_id</string>
     <string name="pref_salt" translatable="false">salt</string>
     <string name="pref_passhash" translatable="false">passhash</string>
+    <string name="pref_primary" translatable="false">primary</string>
 
     <string name="pref_device_id" translatable="false">device_id</string>
     <string name="pref_my_account_setup" translatable="false">my_account_setup</string>
