add option in account fragment to delete account

--- a/app/src/main/res/xml/my_account.xml
+++ b/app/src/main/res/xml/my_account.xml
@@ -27,4 +27,9 @@
         android:key="@string/pref_about_device_id"
         android:title="@string/device_id" />
 
+    <Preference
+        android:key="@string/pref_delete_account"
+        android:title="@string/delete_account"
+        android:summary="@string/delete_account_summary"/>
+
 </PreferenceScreen>
