--- a/app/src/main/res/values/preferences.xml
+++ b/app/src/main/res/values/preferences.xml
@@ -26,6 +26,7 @@
 
     <string name="pref_device_id" translatable="false">device_id</string>
     <string name="pref_my_account_setup" translatable="false">my_account_setup</string>
+    <string name="pref_delete_account" translatable="false">delete_account</string>
 
     <string name="pref_about_changelog" translatable="false">changelog</string>
     <string name="pref_about_copyright" translatable="false">copyright</string>
