--- a/app/src/main/res/layout/dialog_color_preference.xml
+++ b/app/src/main/res/layout/dialog_color_preference.xml
@@ -14,24 +14,56 @@
   ~ limitations under the License.
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:gravity="center_horizontal"
-    android:layout_gravity="center_horizontal">
+    android:layout_height="match_parent"
+    android:scrollbars="vertical">
 
-    <com.larswerkman.lobsterpicker.LobsterPicker
-        android:id="@+id/lobsterpicker"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        app:color_history_enabled="true" />
+        android:gravity="center_horizontal"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp">
 
-    <com.larswerkman.lobsterpicker.sliders.LobsterShadeSlider
-        android:id="@+id/shadeslider"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <com.larswerkman.lobsterpicker.LobsterPicker
+            android:id="@+id/lobsterpicker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            app:color_history_enabled="true" />
 
-</LinearLayout>
+        <com.larswerkman.lobsterpicker.sliders.LobsterShadeSlider
+            android:id="@+id/shadeslider"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/normalize"
+            android:gravity="center_horizontal"
+            android:visibility="gone">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:text="@string/normalize_color_scheme"
+                android:gravity="center_horizontal"/>
+
+            <GridView
+                android:layout_width="200dp"
+                android:layout_height="275dp"
+                android:numColumns="4"
+                android:id="@+id/color_picker"
+                android:gravity="center"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+</ScrollView>
