--- a/app/src/main/res/layout/invite_list_item.xml
+++ b/app/src/main/res/layout/invite_list_item.xml
@@ -22,12 +22,28 @@
     android:foreground="?android:attr/selectableItemBackground"
     android:clickable="true">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/image"
+    <FrameLayout
         android:layout_width="48dp"
         android:layout_height="48dp"
-        app:civ_border_width="0dp"
-        android:layout_marginEnd="16dp" />
+        android:layout_marginEnd="16dp">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:civ_border_width="0dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:id="@+id/image_letter"
+            android:textSize="30sp"
+            android:layout_gravity="center"
+            android:layout_marginTop="-1dp"
+            android:textColor="@android:color/white"/>
+
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="0dp"
